--- a/src/Raytha.Web/appsettings.json
+++ b/src/Raytha.Web/appsettings.json
@@ -16,9 +16,9 @@
   "PATHBASE": "", // example: "/mywebsite"
 
   //Email settings
-  //Recommend sendgrid.com or mailgun.com for production. 
+  //Recommend sendgrid.com or mailgun.com for production.
   //For local dev, check out https://github.com/ChangemakerStudios/Papercut-SMTP
-  "SMTP_HOST": "127.0.0.1",
+  "SMTP_HOST": "smtp_lvhomes",
   "SMTP_PORT": 25,
   "SMTP_USERNAME": "",
   "SMTP_PASSWORD": "",
@@ -31,7 +31,7 @@
   "FILE_STORAGE_PROVIDER": "Local", //Options: Local, AzureBlob, S3
   "FILE_STORAGE_MAX_FILE_SIZE": 20000000, //bytes, 20 mb
   "FILE_STORAGE_MAX_TOTAL_DISK_SPACE": 1000000000, //bytes, 1 gb
-  "FILE_STORAGE_ALLOWED_MIMETYPES": "text/*,image/*,video/*,audio/*,application/pdf,model/gltf-binary,model/gltf+json,.glb", //Comma separated mime types. Can use wildcard like image/*,video/*
+  "FILE_STORAGE_ALLOWED_MIMETYPES": "text/*,image/*,video/*,audio/*,application/pdf,model/gltf-binary,model/gltf+json,.glb,.zip", //Comma separated mime types. Can use wildcard like image/*,video/*
   "FILE_STORAGE_USE_DIRECT_UPLOAD_TO_CLOUD": true, //Recommended set to true if using S3 or AzureBlob, requires CORS config on the cloud buckets
   "FILE_STORAGE_LOCAL_DIRECTORY": "user-uploads", //Required if FILE_STORAGE_PROVIDER = Local
   "FILE_STORAGE_AZUREBLOB_CONNECTION_STRING": "", //Required if FILE_STORAGE_PROVIDER = AzureBlob
